@@ -1,10 +1,6 @@
-package org.example.tools.launcher;
+package org.example.tools;
 
 import com.sun.jna.platform.win32.WinDef.*;
-import org.example.tools.Keyboard;
-
-import java.io.IOException;
-import java.util.concurrent.TimeUnit;
 
 
 public class Launcher {
@@ -12,17 +8,17 @@ public class Launcher {
     private final String EXECUTABLE_PATH = "C:\\Program Files (x86)\\Private Tax 2023\\Private Tax 2023.exe";
     private HWND hwnd;
 
-
     public Launcher(){
     }
 
-
     private void launch() {
-
         try {
-            Runtime.getRuntime().exec(EXECUTABLE_PATH);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
+            ProcessBuilder pb = new ProcessBuilder(EXECUTABLE_PATH);
+            pb.start();
+
+        }
+        catch (Exception e) {
+            e.printStackTrace();
         }
     }
 
@@ -30,13 +26,13 @@ public class Launcher {
     private void isAlive(){
         final int PID = WindowsApi.getProcessIdByWindowHandle(hwnd);
         int currentWindowPid;
-        String currentWindowTitle = "";
-
+        String currentWindowTitle;
 
 
 
         while (true){
             HWND foregroundWindow = WindowsApi.getForegroundWindow();
+            System.out.println(1);
 
             currentWindowPid = WindowsApi.getProcessIdByWindowHandle(foregroundWindow);
             currentWindowTitle = WindowsApi.getWindowTitle(foregroundWindow);
@@ -46,18 +42,16 @@ public class Launcher {
                 throw new RuntimeException("Program Interrupted");
             }
 
-            if (currentWindowTitle.startsWith("Probleme")){
+            if (currentWindowTitle.equals("Probleme")){
                 throw new RuntimeException("Problem occured while filling tax declaration");
             }
 
+            if (currentWindowTitle.equals("Information")){
+                Keyboard.space();
+            }
 
-
-
-
-
-        }
+            }
     }
-
 
     public void start(){
         hwnd = WindowsApi.findByTitle(WINDOW_TITLE);
@@ -70,8 +64,10 @@ public class Launcher {
             hwnd = WindowsApi.findByTitle(WINDOW_TITLE);
         }
 
+        Keyboard.sleep(500);
 
-        Keyboard.sleep(50);
+
+        hwnd = WindowsApi.findByTitle(WINDOW_TITLE);
 
         if (!WindowsApi.isForegroundWindow(hwnd)) {
             WindowsApi.setForegroundWindow(hwnd);
@@ -95,5 +91,4 @@ public class Launcher {
                 WindowsApi.getForegroundWindow()
         );
     }
-
 }
